--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-picker/picker": "2.11.0",
+    "axios": "^1.10.0",
     "expo": "~53.0.11",
     "expo-constants": "~17.1.6",
     "expo-image-picker": "~16.1.4",
